trunk/Archive/06ac9c653468cfa145415cb2c90966ba-ad7854d9cfd7979d567ca413f0830b65/output
+ g++ -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘class Bar<int>’:
main.cpp:25:21:   required from here
main.cpp:17:7: error: base type ‘int’ fails to be a struct or class type
 class Bar : public T
       ^
main.cpp: In instantiation of ‘class Bar<float>’:
main.cpp:30:23:   required from here
main.cpp:17:7: error: base type ‘float’ fails to be a struct or class type
